# epitok-gtk

./: Cargo.toml  com.philippeloctaux.epitok.desktop  readme.md
.github/workflows/: ci.yml
icons/: readme.md
src/: about.rs  app.rs  content.rs  header.rs  main.rs  settings.rs  storage.rs  strings.rs  ui.rs
