[package]
name = "epitok-gtk"
version = "0.1.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"

[dependencies]
# epitok
epitok = { git = "https://github.com/x4m3/epitok" }
#epitok = { path = "../epitok" }

# gui
gtk = { version = "0.9.0", features = ["v3_24"] }
glib = "0.10.1"

# settings storage
directories-next = "1.0.1"
#toml = "0.5.6"
#serde_derive = "1.0.114"